task2/hello-world-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hello-world-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: mynodeapp.com
      http:
        paths:
          - path: /a
            backend:
              serviceName: hello-world-service
              servicePort: 3000
